--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -12,12 +12,14 @@
   
     .news__h1 {
       color: $news-font;
-      font-size: 1.15rem;
-      margin: 20px 0;
+      font-size: 2.25rem;
+      font-weight: 600;
+      padding: 40px 0 0;
     }
     
     .news__view-all {
-      font-size: 1.25rem;
+      font-size: 1.625rem;
+      font-weight: 600;
       text-decoration: none;
       text-align: center;
       margin: auto;
@@ -35,8 +37,9 @@
     .news__view-all--top {
       display: none;
       position: relative;
-      top: -60px;
-      font-size: 18px;
+      bottom: 45px;
+      font-size: 1.625rem;
+      font-weight: 600;
       text-decoration: none;
       text-align: right;
       color: $news-font;
@@ -57,13 +60,13 @@
       flex-direction: column;
       justify-content: center;
       gap: 20px;  
-      padding: 20px 0 50px;
-      margin-top: 20px;
+      padding: 0 0 30px;
+      
     }
 
-
         .news__card {
-            border: none;
+            
+            border: 1px solid #ccc;
             border-radius: 3px;
             overflow: hidden;
             width: 100%;
@@ -84,7 +87,6 @@
             &--banner {
               position: relative;
               text-align: center;
-              background-color: $news-banner-strip;
 
                 img {
                   width: 100%;
@@ -99,23 +101,33 @@
               right: 0;
               background-color: $news-badge;
               color: $font-white;
-              padding: 5px 10px;
+              padding: 0 10px;
               border-radius: 2px;
               font-size: 12px;
               font-weight: bold;
+              line-height: 1.438rem;
             }
 
             // Content Preview
+
+            &--main {
+              padding: 30px;
+            }
+
             &--body {
-              padding: 15px;
+              padding: 0;
 
               h2 {
-                font-size: 16px;
-                margin: 0 0 10px 0;
+                min-height: 3rem;
+                font-size: 1rem;
+                font-weight: 600;
+                line-height: 1.5rem;
+                margin: 0 0 15px;
                 color: $news-headline;
                   
                 span {
-                  font-size: 13px;
+                  font-size: .85rem;
+                  font-weight: 400;
                   color: $news-read-time;
                   text-transform: uppercase;
                 }
@@ -132,23 +144,18 @@
             
             // Read more button
             .news__read--btn {
-              display: inline-block;
-              padding: 10px 20px;
-              background-color: $news-read-more;
-              color: $font-white;
+              @include button($news-read-more, $font-white, darken($news-read-more, 10%), auto, 35px, 15px 15px, uppercase, 1.063rem, 3px, normal, pointer);
               text-decoration: none;
-              border-radius: 5px;
-              font-weight: bold;
-              text-align: center;
+              font-weight: 400;
             }
 
             // Footer post info
             &--footer {
               display: flex;
               align-items: center;
-              padding: 15px;
-              margin-top: 30px;
-              padding-top: 30px;
+              padding: 30px;
+              margin-top: 40px;
+              
               border-top: 1px solid #ccc;
             
               // Avatar
@@ -172,8 +179,8 @@
                   }
                   // Date
                   small {
-                    font-weight: 400;
-                    color: $news-read-time;
+                    font-weight: 500;
+                    color: #666;
                   }
                   p {
                     margin: 0;
@@ -191,7 +198,6 @@
   }
   .news__card {
     width: 50%;
-    margin-right: 20px;
   }
 }
 @media (min-width: 768px) and (max-width: 1259px) {
@@ -202,6 +208,5 @@
 @media (min-width: 1260px) {
   .news__card {
     width: 33.33%;
-    margin-right: 20px;
   }
 }
